--- a/templates/product_day.html
+++ b/templates/product_day.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>medE</title>
 	<link rel="icon" type="image/x-icon" href="{% static 'Favicon.png' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'product.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'product_day.css' %}">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -306,7 +306,23 @@
                     </div>
 					<div class="buttons row">
 						<button class="addtocart col-sm-5">Add to Cart</button>
-						<button class="buynow col-sm-5">Add To List</button>
+						<button id="addtolist" class="addtolist col-sm-5">Add To List</button>
+						<div class="addtolistddown">
+							<div>
+								<input type="checkbox" name="Morning" value="Morning">
+								<label for="Morning">Morning</label>
+							</div>
+							<div>
+								<input type="checkbox" name="Day" value="Day">
+								<label for="Day">Day</label>
+
+							</div>
+							<div>
+								<input type="checkbox" name="Night" value="Night">
+								<label for="Night">Night</label>
+
+							</div>
+						</div>
 					</div>
                 </div>
                 
